# logger

./: .gitignore  CMakeLists.txt  console_logger.cpp  console_logger.h  file_logger.cpp  file_logger.h  log-test.c  log-test.cpp  logger.h  logger_sink.h  main.cpp  syslog_logger.h
include/: clog.h  log.h  logger.h
src/: core.cpp  logger.cpp  syslog_logger.cpp
